--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,2 +1,5 @@
+header.svelte-1u8d32t{position:fixed;width:100%;height:4rem;background:#cf0056;box-shadow:0 2px 6px rgba(0,0,0, .26);display:flex;justify-content:center;align-items:center}h1.svelte-1u8d32t{color:White;font-family:'Roboto Slab', sans-serif;margin:0}
+header.svelte-1u8d32t{position:fixed;width:100%;height:4rem;background:#cf0056;box-shadow:0 2px 6px rgba(0,0,0, .26);display:flex;justify-content:center;align-items:center}h1.svelte-1u8d32t{color:White;font-family:'Roboto Slab', sans-serif;margin:0}
+header.svelte-1u8d32t{position:fixed;width:100%;height:4rem;background:#cf0056;box-shadow:0 2px 6px rgba(0,0,0, .26);display:flex;justify-content:center;align-items:center}h1.svelte-1u8d32t{color:White;font-family:'Roboto Slab', sans-serif;margin:0}
 
 /*# sourceMappingURL=bundle.css.map */
