--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,5 +1,6 @@
-header.svelte-1u8d32t{position:fixed;width:100%;height:4rem;background:#cf0056;box-shadow:0 2px 6px rgba(0,0,0, .26);display:flex;justify-content:center;align-items:center}h1.svelte-1u8d32t{color:White;font-family:'Roboto Slab', sans-serif;margin:0}
-header.svelte-1u8d32t{position:fixed;width:100%;height:4rem;background:#cf0056;box-shadow:0 2px 6px rgba(0,0,0, .26);display:flex;justify-content:center;align-items:center}h1.svelte-1u8d32t{color:White;font-family:'Roboto Slab', sans-serif;margin:0}
+main.svelte-njhsg1{padding-top:5rem}
+section.svelte-1p3iasx{width:100%;display:grid;grid-template-columns:1fr;grid-gap:1rem}@media(min-width: 768px){section.svelte-1p3iasx{grid-template-columns:repeat(2, 1fr)}}
+article.svelte-irmfce.svelte-irmfce{box-shadow:0 2px 8px rgba(0, 0, 0, 0.26);border-radius:5px;background:white;margin:1rem}header.svelte-irmfce.svelte-irmfce,.content.svelte-irmfce.svelte-irmfce,footer.svelte-irmfce.svelte-irmfce{padding:1rem}.image.svelte-irmfce.svelte-irmfce{width:100%;height:14rem}.image.svelte-irmfce img.svelte-irmfce{width:100%;height:100%;object-fit:cover}h1.svelte-irmfce.svelte-irmfce{font-size:1.25rem;margin:0.5rem 0;font-family:"Roboto Slab", sans-serif}h2.svelte-irmfce.svelte-irmfce{font-size:1rem;color:#808080;margin:0.5rem 0}p.svelte-irmfce.svelte-irmfce{font-size:1.25rem;margin:0}div.svelte-irmfce.svelte-irmfce{text-align:right}
 header.svelte-1u8d32t{position:fixed;width:100%;height:4rem;background:#cf0056;box-shadow:0 2px 6px rgba(0,0,0, .26);display:flex;justify-content:center;align-items:center}h1.svelte-1u8d32t{color:White;font-family:'Roboto Slab', sans-serif;margin:0}
 
 /*# sourceMappingURL=bundle.css.map */
